@@ -177,7 +177,7 @@ udp_send(int argc, VALUE *argv, VALUE sock)
       retry:
 	arg.to = res->ai_addr;
 	arg.tolen = res->ai_addrlen;
-	rb_thread_fd_writable(arg.fd);
+	rsock_maybe_fd_writable(arg.fd);
 	n = (int)BLOCKING_REGION_FD(rsock_sendto_blocking, &arg);
 	if (n >= 0) {
 	    freeaddrinfo(res0);
